Updating the component scaffolding.

--- a/src/Console/Command/Scaffolding/Templates/component.tmpl/admin/language/en-GB/en-GB.%=option=%.ini.tmpl
+++ b/src/Console/Command/Scaffolding/Templates/component.tmpl/admin/language/en-GB/en-GB.%=option=%.ini.tmpl
@@ -8,3 +8,5 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 %=option+uc=%="%=component_name+ucf=%"
+%=option+uc=%_CONFIGURATION="%=component_name+ucf=% Configuration"
+
