--- a/src/Console/Command/Scaffolding/Templates/component.tmpl/site/%=component_name=%.php.tmpl
+++ b/src/Console/Command/Scaffolding/Templates/component.tmpl/site/%=component_name=%.php.tmpl
@@ -32,7 +32,7 @@
 
 namespace Components\%=component_name+ucf=%\Site;
 
-require_once dirname(__DIR__) . DS . 'models' . DS . '%=component_name+ucf=%.php';
+require_once dirname(__DIR__) . DS . 'models' . DS . '%=component_name=+p%.php';
 
 $controllerName = Request::getCmd('controller', Request::getCmd('view', '%=component_name=%'));
 if (!file_exists(__DIR__ . DS . 'controllers' . DS . $controllerName . '.php'))
@@ -40,7 +40,7 @@ if (!file_exists(__DIR__ . DS . 'controllers' . DS . $controllerName . '.php'))
 	$controllerName = '%=component_name=%';
 }
 require_once __DIR__ . DS . 'controllers' . DS . $controllerName . '.php';
-$controllerName = __NAMESPACE__ . '\\Controllers\\' . ucfirst($controllerName);
+$controllerName = __NAMESPACE__ . '\\Controllers\\' . ucfirst(strtolower($controllerName));
 
 // Instantiate controller
 $controller = new $controllerName();
