--- a/src/Console/Command/Scaffolding/Templates/component.tmpl/models/%=component_name=+p%.php.tmpl
+++ b/src/Console/Command/Scaffolding/Templates/component.tmpl/models/%=component_name=+p%.php.tmpl
@@ -29,7 +29,16 @@
  * @copyright Copyright 2005-2015 HUBzero Foundation, LLC.
  * @license   http://opensource.org/licenses/MIT MIT
  */
+namespace Components\%=component_name+ucf=%\Models;
 
-$this->css()
-     ->js();
-?>
+use Hubzero\Database\Relational;
+
+/**
+ * %=component_name+ucfp=% database model
+ *
+ * @uses  \Hubzero\Database\Relational
+ */
+class %=component_name+ucfp=% extends Relational
+{
+
+}
